# quarto-yaml

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/braid/: SKILL.md
.github/workflows/: ci.yml
crates/quarto-yaml/: Cargo.toml  README.md
crates/quarto-yaml-validation/: Cargo.toml  JSON-OUTPUT-SCHEMA.md  README.md
crates/quarto-yaml-validation/src/: diagnostic.rs  error.rs  tests.rs  validator.rs
crates/quarto-yaml-validation/src/schema/: helpers.rs  merge.rs  mod.rs  parser.rs
crates/quarto-yaml-validation/src/schema/parsers/: combinators.rs  enum.rs  objects.rs  ref.rs  wrappers.rs
crates/quarto-yaml-validation/src/snapshots/: quarto_yaml_validation__diagnostic__tests__all_three_formats_snapshot.snap
crates/quarto-yaml-validation/tests/integration/: comprehensive_schemas.rs  main.rs  real_schemas.rs  validation_diagnostic.rs
crates/quarto-yaml/src/: lib.rs  parser.rs  yaml_with_source_info.rs
