[package]
name = "quarto-yaml-validation"
description = "Schema validation for YAML 1.2 documents, with source-located diagnostics."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["yaml", "validation", "schema", "diagnostics", "source-map"]
categories = ["parsing", "development-tools"]

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization (serde_json for enum values in schemas)
serde.workspace = true
serde_json.workspace = true
# Note: We don't use serde_yaml because it only supports YAML 1.1.
# See YAML-1.2-REQUIREMENT.md for details.

# YAML parsing
yaml-rust2.workspace = true

# Workspace / published deps
quarto-yaml = { workspace = true }
quarto-source-map = { workspace = true }
quarto-error-reporting = { workspace = true }

# Additional dependencies for validation
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
